<resources>
    <string name="app_name">GithubSearch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="fitur_develop_info">Fitur masih dalam tahap pengembangan</string>
    <string name="username_not_found">Username tidak ditemukan</string>
    <string name="text_follow_null">Tidak ada data yang ditampilkan</string>
    <string name="text_info_jumlah_user">Jumlah user yang ditampilkan :</string>
    <string name="user_favorite">User Favorite</string>
    <string name="github_search">Github Search</string>
    <string name="detail_user">Detail User</string>
    <string name="find_user">Cari user…</string>
    <string name="dark_mode">"Dark Mode "</string>
    <string name="text_back">Back</string>
    <string name="theme_setting">Theme Setting</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
</resources>