<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SettingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        app:elevation="@dimen/_5sdp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"

        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/text_back"
                tools:ignore="UnusedAttribute"
                android:focusable="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18ssp"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/theme_setting"/>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>