<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        app:elevation="@dimen/_5sdp"
        android:layout_height="?attr/actionBarSize"
        android:elevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/_8sdp"
            android:paddingStart="@dimen/_8sdp"
            android:orientation="horizontal"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:src="@drawable/ic_arrow_back"
                tools:ignore="UnusedAttribute"
                android:focusable="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_18ssp"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="@string/detail_user"/>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/detailUserContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer_view_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:shimmer_duration="800">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/detail_user_placeholder"/>

                    </LinearLayout>
                </com.facebook.shimmer.ShimmerFrameLayout>

                <LinearLayout
                    android:id="@+id/viewDetailUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center"
                    android:orientation="vertical">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivUserProfile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:src="@tools:sample/avatars"/>

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/ivUserProfile"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tvName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tvUsername"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cvFollowers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="@color/design_default_color_primary"
                            app:cardCornerRadius="@dimen/_10sdp"
                            android:layout_marginStart="@dimen/_16sdp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:padding="@dimen/_6sdp"
                                tools:ignore="UseCompoundDrawables">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_person_add"
                                    android:contentDescription="@string/todo" />
                                <TextView
                                    android:id="@+id/tvTotalFollowers"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/white"
                                    android:layout_marginStart="@dimen/_2sdp"/>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cvFollowing"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            app:cardBackgroundColor="@color/design_default_color_primary"
                            app:cardCornerRadius="@dimen/_10sdp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:padding="@dimen/_6sdp"
                                tools:ignore="UseCompoundDrawables">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_person_24"
                                    android:contentDescription="@string/todo" />
                                <TextView
                                    android:id="@+id/tvTotalFollowing"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/white"
                                    android:layout_marginStart="@dimen/_2sdp"/>
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/detailUserContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerFollow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/_4sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tab_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:src="@drawable/ic_favorite_border"
        android:contentDescription="@string/favorite" />
    <ProgressBar
        android:id="@+id/progressBarFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp">

    </ProgressBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>